# youtube-tunnel-api-revamp

./: .env  Cargo.toml
service/: Cargo.toml
service/src/: lib.rs  video_player.rs  video_search.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/errors/: app_error.rs
shared/src/model/: mod.rs  video_search.rs
src/: main.rs
web/: Cargo.toml
web/src/: lib.rs  server.rs
web/src/controllers/: mod.rs  video_player.rs  video_search.rs
