[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]

# Internal
shared = {path = "../shared"}

# External
reqwest = "0.12.24"
anyhow = "1.0.100"
serde_json = "1.0.145"
base64 = "0.22.1"
futures = "0.3.31"
tracing.workspace = true
log.workspace = true
tracing-subscriber.workspace = true

